[gd_scene load_steps=3 format=3 uid="uid://dlj17plvprv5e"]

[ext_resource type="Script" path="res://Scenes/UI/pause_menu.gd" id="1_uo14h"]
[ext_resource type="AudioStream" uid="uid://b2hrxuuxyjury" path="res://Assets/Audio/Music/pause_theme_mixed.ogg" id="2_nikio"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uo14h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Paused Game"

[node name="ResumeButton" type="Button" parent="MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitSound" type="AudioStreamPlayer" parent="."]

[node name="PauseMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nikio")

[connection signal="pressed" from="MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
